log/build_2021-06-01_12-26-07/wasp_mini_controller/stdout_stderr.log
running egg_info
writing ../../build/wasp_mini_controller/wasp_mini_controller.egg-info/PKG-INFO
writing dependency_links to ../../build/wasp_mini_controller/wasp_mini_controller.egg-info/dependency_links.txt
writing entry points to ../../build/wasp_mini_controller/wasp_mini_controller.egg-info/entry_points.txt
writing requirements to ../../build/wasp_mini_controller/wasp_mini_controller.egg-info/requires.txt
writing top-level names to ../../build/wasp_mini_controller/wasp_mini_controller.egg-info/top_level.txt
reading manifest file '../../build/wasp_mini_controller/wasp_mini_controller.egg-info/SOURCES.txt'
writing manifest file '../../build/wasp_mini_controller/wasp_mini_controller.egg-info/SOURCES.txt'
running build
running build_py
copying wasp_mini_controller/main.py -> /home/wasp_mini/ros2_ws/build/wasp_mini_controller/build/lib/wasp_mini_controller
running install
running install_lib
copying /home/wasp_mini/ros2_ws/build/wasp_mini_controller/build/lib/wasp_mini_controller/main.py -> /home/wasp_mini/ros2_ws/install/wasp_mini_controller/lib/python3.8/site-packages/wasp_mini_controller
byte-compiling /home/wasp_mini/ros2_ws/install/wasp_mini_controller/lib/python3.8/site-packages/wasp_mini_controller/main.py to main.cpython-38.pyc
  File "/home/wasp_mini/ros2_ws/install/wasp_mini_controller/lib/python3.8/site-packages/wasp_mini_controller/main.py", line 97
    def euler_from_quaternion([quaternion_x, quaternion_y, quaternion_z, quaternion_w]):
                              ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/wasp_mini/ros2_ws/install/wasp_mini_controller/lib/python3.8/site-packages/wasp_mini_controller-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../build/wasp_mini_controller/wasp_mini_controller.egg-info to /home/wasp_mini/ros2_ws/install/wasp_mini_controller/lib/python3.8/site-packages/wasp_mini_controller-0.0.0-py3.8.egg-info
running install_scripts
Installing actuator_position script to /home/wasp_mini/ros2_ws/install/wasp_mini_controller/lib/wasp_mini_controller
Installing main_node script to /home/wasp_mini/ros2_ws/install/wasp_mini_controller/lib/wasp_mini_controller
Installing motor_FL script to /home/wasp_mini/ros2_ws/install/wasp_mini_controller/lib/wasp_mini_controller
Installing motor_FR script to /home/wasp_mini/ros2_ws/install/wasp_mini_controller/lib/wasp_mini_controller
writing list of installed files to '/home/wasp_mini/ros2_ws/build/wasp_mini_controller/install.log'
